--- a/index.html
+++ b/index.html
@@ -11,20 +11,24 @@
 </head>
 <body>
 
-
     <header>
-        <div class="container centrer">
-            <a href="membre.html">Enregistrer un son</a>
+        <div class="container header">
+            <a class="nav" href="commune.html">Commune</a>
+            <a class="nav" href="membre.html">Enregistrer un son</a>
         </div>
     </header>
 
-    <div class="container">
 
-        <h1 id="titreAccueil" class="centrer">Titre app</h1>
 
-        <input  id="inputAccueil" type="text" placeholder="Exemple:1030...">
+
+    <div class="container centrer">
+        <h1 id="titreAccueil">Titre app</h1>
+        <form action="">
+                <input id="inputAccueil" type="text" placeholder="Exemple:1030...">
+        </form>
+
         
-        <div id="map"></div> <!-- container de la map -->
+        <div class="map" id="map"></div> <!-- container de la map -->
         
     </div>
 
