--- a/commune.html
+++ b/commune.html
@@ -18,15 +18,17 @@
                 </div>
             </header>
 
-<div class="container">
-    <div class="row">
-        <h2 class="col-xs-12">Commune : </h2>
-        <div class="map col-xs-12" id="map"></div> <!-- container de la map -->
-    </div>
-</div>
-    
-        
-    </div>
+            <div class="container">
+                    <div class="row">
+                        <h2 id="commune" class="col-xs-12">Commune : </h2>
+                        <div class="map col-xs-12" id="map"></div>
+                        <!-- container de la map -->
+                    </div>
+                    <div class="buttonJourNuit">
+                        <button id="buttonJour" type="button" name="jour">Jour</button>
+                        <button id="buttonNuit" type="button" name="nuit">Nuit</button>
+                    </div>
+                </div>
 
 
 
