--- a/commune.html
+++ b/commune.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="assets/style.css">
     <title>Document</title>
 </head>
@@ -12,10 +13,12 @@
 
 
         <header>
-                <div class="container centrer header">
-                    <a class="nav" href="index.html">Index</a>
+                <div class="header">
+                    <a class="nav" href="index.html">Accueil</a>
                     <a class="nav" href="son.html">Enregistrer un son</a>
-                    <a class="nav" href="membre.html">Connexion</a>
+                    <a class="nav" href="membre.html">S'identifier</a>
+                    <span class="glyphicon glyphicon-user"></span> 
+                    <span class="glyphicon glyphicon-envelope"></span>
                 </div>
             </header>
 
@@ -30,7 +33,10 @@
                         <button id="buttonNuit" type="button" name="nuit">Nuit</button>
                     </div>
                 </div>
-
+                <footer>
+                        <p>Une initiative de ....</p>
+                        <p>Copyright : team RedPill</p>
+                    </footer>
 
 
 <script>
