--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Ubuntu" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
     <title>Document</title>
 </head>
@@ -24,6 +25,7 @@
 
     <div class="container centrer">
         <h1 id="titreAccueil">DeciBelge</h1>
+        <p>J'emménage. Y-a-t'il du bruit dans ce quartier ?</p>
 
         <!-- Liste déroulante-->
         <div id="parentListeDeroulante">
@@ -59,6 +61,17 @@
 
     </div>
         </form>
+
+
+
+<footer>
+    <p>Une initiative de ....</p>
+    <p>Copyright : team RedPill</p>
+</footer>
+
+
+
+
 
 <!-- ..............Script choix commune...............-->
 <script>
