rajout d'un footer

--- a/commune.html
+++ b/commune.html
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <footer>
-                        <p>Une initiative de ....</p>
+                        <p>Une initiative de la CIRB</p>
                         <p>Copyright : team RedPill</p>
                     </footer>
 
