--- a/son.html
+++ b/son.html
@@ -37,7 +37,7 @@
         </div>
 
         <footer>
-                <p>Une initiative de ....</p>
+                <p>Une initiative de la CIRB</p>
                 <p>Copyright : team RedPill</p>
             </footer>
 
