--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 
 <footer>
-    <p>Une initiative de ....</p>
+    <p>Une initiative de la CIRB</p>
     <p>Copyright : team RedPill</p>
 </footer>
 
