--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous"> >>>>>>> 6fc51c632d9486f67c7838517e9933c4f7158ecb
+        crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
     <title>Home</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
@@ -64,7 +64,6 @@
 
         <div class="map" id="map"></div>
         <!-- container de la map -->
-        >>>>>>> 6fc51c632d9486f67c7838517e9933c4f7158ecb
 
     </div>
     </form>
@@ -108,4 +107,3 @@
 </body>
 
 </html>
->>>>>>> 6fc51c632d9486f67c7838517e9933c4f7158ecb
