--- a/commune.html
+++ b/commune.html
@@ -29,14 +29,14 @@
                         <!-- container de la map -->
                     </div>
                     <div class="buttonJourNuit">
-                        <button id="buttonJour" type="button" name="jour">Jour</button>
-                        <button id="buttonNuit" type="button" name="nuit">Nuit</button>
+                        <button id="buttonJour" type="button" name="jour" onclick="initMap()">Jour</button>
+                        <button id="buttonNuit" type="button" name="nuit" onclick="mapNigth()">Nuit</button>
                     </div>
                 </div>
                 <footer>
                         <p>Une initiative de la CIRB</p>
                         <p>Copyright : team RedPill</p>
-                    </footer>
+                </footer>
 
 
 <script>
@@ -47,6 +47,100 @@
     var map = new google.maps.Map(document.getElementById('map'), {
       zoom: 11,
       center: uluru
+    });
+    var marker = new google.maps.Marker({
+      position: uluru,
+      map: map
+    });
+  }
+
+  function mapNigth() {
+    var uluru = {lat: 50.8503396, lng: 4.3517103};
+    var maisonMarie = {lat:50.8607254, lgn:4.3835315};
+
+    var map = new google.maps.Map(document.getElementById('map'), {
+      zoom: 11,
+      center: uluru,
+      styles: [
+            {elementType: 'geometry', stylers: [{color: '#242f3e'}]},
+            {elementType: 'labels.text.stroke', stylers: [{color: '#242f3e'}]},
+            {elementType: 'labels.text.fill', stylers: [{color: '#746855'}]},
+            {
+              featureType: 'administrative.locality',
+              elementType: 'labels.text.fill',
+              stylers: [{color: '#d59563'}]
+            },
+            {
+              featureType: 'poi',
+              elementType: 'labels.text.fill',
+              stylers: [{color: '#d59563'}]
+            },
+            {
+              featureType: 'poi.park',
+              elementType: 'geometry',
+              stylers: [{color: '#263c3f'}]
+            },
+            {
+              featureType: 'poi.park',
+              elementType: 'labels.text.fill',
+              stylers: [{color: '#6b9a76'}]
+            },
+            {
+              featureType: 'road',
+              elementType: 'geometry',
+              stylers: [{color: '#38414e'}]
+            },
+            {
+              featureType: 'road',
+              elementType: 'geometry.stroke',
+              stylers: [{color: '#212a37'}]
+            },
+            {
+              featureType: 'road',
+              elementType: 'labels.text.fill',
+              stylers: [{color: '#9ca5b3'}]
+            },
+            {
+              featureType: 'road.highway',
+              elementType: 'geometry',
+              stylers: [{color: '#746855'}]
+            },
+            {
+              featureType: 'road.highway',
+              elementType: 'geometry.stroke',
+              stylers: [{color: '#1f2835'}]
+            },
+            {
+              featureType: 'road.highway',
+              elementType: 'labels.text.fill',
+              stylers: [{color: '#f3d19c'}]
+            },
+            {
+              featureType: 'transit',
+              elementType: 'geometry',
+              stylers: [{color: '#2f3948'}]
+            },
+            {
+              featureType: 'transit.station',
+              elementType: 'labels.text.fill',
+              stylers: [{color: '#d59563'}]
+            },
+            {
+              featureType: 'water',
+              elementType: 'geometry',
+              stylers: [{color: '#17263c'}]
+            },
+            {
+              featureType: 'water',
+              elementType: 'labels.text.fill',
+              stylers: [{color: '#515c6d'}]
+            },
+            {
+              featureType: 'water',
+              elementType: 'labels.text.stroke',
+              stylers: [{color: '#17263c'}]
+            }
+          ]
     });
     var marker = new google.maps.Marker({
       position: uluru,
