--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@
 
 <script>
     function myFunction() {
-        var x = document.getElementById("mySelect").selectedIndex;
-        alert(document.getElementsByTagName("option")[x].value);
+		var x = document.getElementById("mySelect").selectedIndex;
+		//window.location.href = "commune.html";
+
+        // alert(document.getElementsByTagName("option")[x].value);
         }
 </script>
 
